# wine_king

./: .gitignore  AGENTS.md  CHANGELOG.md  GAME_DESIGN.md  README.md  TESTING.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
.github/workflows/: windows-release.yml
design/: ASSET_PROMPTS.md
public/packs/: index.json
public/packs/sunlit-terroir/: pack.json
scripts/: prepare-sites-build.mjs  release-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: game.rs  lib.rs  main.rs
src/components/: IconSlot.tsx  UpdateToast.tsx
src/hooks/: useGameUpdater.ts
src/lib/: assetPack.test.ts  assetPack.ts  gameGateway.ts  previewEngine.test.ts  previewEngine.ts  updateManager.test.ts  updateManager.ts  updateSettings.test.ts  updateSettings.ts
src/types/: game.ts
tests/: release-version.test.mjs  sites-worker.test.mjs  vite-config.test.mjs  windows-release-config.test.mjs
worker/: index.js
