[package]
name = "wine-king"
version = "0.1.1"
description = "A vineyard management and rivalry strategy game"
authors = ["Wine King contributors"]
edition = "2021"

[lib]
name = "wine_king_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
